# pikpak-downloader

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  README.zh-TW.md  README_EN.md  README_JA.md  README_OPTIMIZED.md  config.py  config_manager.go  exceptions.py  go.mod  logger.py  pikpak-cli  pikpak_cli.go  pikpak_client.go  pikpak_client_test.go  pikpak_downloader.py  requirements.txt  utils.py
rust/: Cargo.toml
rust/pikpak-api/: Cargo.toml
rust/pikpak-api/src/: auth.rs  captcha.rs  client.rs  error.rs  lib.rs  types.rs
rust/pikpak-cli/: Cargo.toml
rust/pikpak-cli/src/: main.rs
src/: auth.rs  captcha.rs  client.rs  error.rs  lib.rs  main.rs  types.rs
