[package]
name = "pikpak-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client for the PikPak personal cloud storage API (reverse-engineered from pikpakcli)"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

md-5 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
