[package]
name = "pikpak-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for managing PikPak personal cloud storage"

[[bin]]
name = "pikpak-cli"
path = "src/main.rs"

[dependencies]
pikpak-api = { path = "../pikpak-api" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
humansize = "2"
